# wasm-template

./: Cargo.toml  build.sh
.cargo/: config
artifacts/: checksums.txt  example.wasm
contracts/example/: Cargo.toml
contracts/example/src/: contract.rs  lib.rs  msg.rs
contracts/example/src/state/: config.rs  mod.rs  state.rs
contracts/example/src/testing/: mod.rs  state_test.rs
